# tianshu

./: README.md
hardware/desktop_dog/: CMakeLists.txt  README.md  partitions.csv
hardware/desktop_dog/components/micro_reactor/: CMakeLists.txt
hardware/desktop_dog/components/micro_reactor/include/: ur_bus.h  ur_core.h  ur_param.h  ur_power.h  ur_trace.h  ur_types.h
hardware/desktop_dog/components/micro_reactor/src/: ur_core.c
hardware/desktop_dog/components/micro_reactor/src/extensions/: ur_acl.c  ur_bus.c  ur_codec.c  ur_panic.c  ur_param.c  ur_power.c  ur_supervisor.c  ur_trace.c  ur_transducers.c  ur_wormhole.c
hardware/desktop_dog/main/: CMakeLists.txt  app_buffers.c  app_buffers.h  app_config.h  app_payloads.h  app_signals.h  baidu_asr.c  baidu_asr.h  baidu_tts.c  baidu_tts.h  data_report.h  dht11.c  dht11.h  dyn_string.c  dyn_string.h  i2s_mic.c  i2s_mic.h  i2s_speaker.c  i2s_speaker.h  idf_component.yml  main.c  mimo_ai.c  mimo_ai.h  wake_word.cpp  wake_word.h  wifi.c  wifi.h
hardware/desktop_dog/main/drivers/: button.c  button.h
hardware/desktop_dog/main/entities/: ent_ai.c  ent_ai.h  ent_asr.c  ent_asr.h  ent_audio.c  ent_audio.h  ent_pet.c  ent_pet.h  ent_recorder.c  ent_recorder.h  ent_sensor.c  ent_sensor.h  ent_system.c  ent_system.h  ent_tianshu.c  ent_tianshu.h  ent_tts.c  ent_tts.h  ent_wake_word.c  ent_wake_word.h
hardware/desktop_dog/main/pet/: pet_attributes.c  pet_attributes.h  pet_display.c  pet_display.h  pet_sound.c  pet_sound.h  pet_storage.c  pet_storage.h
server/: .env.example  .gitignore  fix_templates.py  init_data.py  requirements.txt  run.py
server/app/: __init__.py  config.py  extensions.py  scheduler.py  websocket.py
server/docs/: API.md  INTRODUCTION.md  NOTES.md  PROJECT_PLAN.md
server/handlers/: hitokoto_handler.py  music_handler.py  weather_handler.py
tianshu_studio/: README.md  pubspec.yaml  tianshu_flutter_lowcode_plan.md
tianshu_studio/lib/: app.dart  main.dart
tianshu_studio/linux/: CMakeLists.txt
tianshu_studio/ohos/: oh-package.json5
tianshu_studio/web/: index.html  (+1 more)
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+216 files in other folders)
