idf_component_register(
    SRCS
        "main.c"
        "app_buffers.c"
        "wifi.c"
        "i2s_mic.c"
        "i2s_speaker.c"
        "baidu_asr.c"
        "baidu_tts.c"
        "mimo_ai.c"
        "dht11.c"
        "dyn_string.c"
        "wake_word.cpp"
        "entities/ent_system.c"
        "entities/ent_wake_word.c"
        "entities/ent_recorder.c"
        "entities/ent_asr.c"
        "entities/ent_ai.c"
        "entities/ent_tts.c"
        "entities/ent_sensor.c"
        "entities/ent_tianshu.c"
        "entities/ent_audio.c"
        "entities/ent_pet.c"
        "pet/pet_attributes.c"
        "pet/pet_storage.c"
        "pet/pet_display.c"
        "pet/pet_sound.c"
        "drivers/button.c"
    PRIV_REQUIRES
        spi_flash
        driver
        esp_wifi
        esp_http_client
        nvs_flash
        esp_netif
        json
        mbedtls
        u8g2
        esp_psram
        espressif__esp-sr
        tianshu
        audio_player
        micro_reactor
    INCLUDE_DIRS
        ""
        "."
)
